--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "pureframework",
   "module": "build.ts",
   "type": "module",
+  "scripts": {
+    "build": "bun run build.ts"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
